footer opdate på css

--- a/index.html
+++ b/index.html
@@ -137,39 +137,39 @@
         </section>
     </main>
     <footer>
-        <section class="footer-section booking-form">
-            <h2>Book en tid</h2>
-            <!-- Formular til at booke en tid -->
-            <form>
-                <label for="navn">Navn</label>
-                <input type="text" id="navn" name="navn">
-                <label for="e-mail">E-mail</label>
-                <input type="text" id="e-mail" name="e-mail">
-                <label for="telefon">Telefon nr</label>
-                <input type="text" id="telefon" name="telefon">
-                <input type="submit" value="Indsend">
-            </form>
-            <!-- Slut på formular -->
-        </section>
-        <section class="footer-section contact-info">
-        <h2>Kontakt</h2> 
-            <ul class="kontakt1">
-                <li>Kennedys</li>
-                <li>Astervej 9</li>
-                <li>8471 Sabro</li>
-                <li>Danmark</li>
-                <li>CVR-nummer: 28934874</li>
-            </ul>
-            <ul class="kontakt2">
-                <li>Telefon nr:</li>
-                <li>+4586495200</li>
-                <li>E-mail: </li>
-                <li>salonen@kennedys.dk</li>
-            </ul>
-        </section>
-        <section class="footer-section logo-section">
-            <img src="imgs/logo.footer.webp" alt="Kennedys logo med firma navn og figur der ligner en kjole" class="footer-logo">
-        </section>
+        <footer class="footer">
+            <section class="footer-section booking-form">
+                <h2>Book en tid</h2>
+                <form>
+                    <label for="navn">Navn</label>
+                    <input type="text" id="navn" name="navn">
+                    <label for="e-mail">E-mail</label>
+                    <input type="text" id="e-mail" name="e-mail">
+                    <label for="telefon">Telefon nr</label>
+                    <input type="text" id="telefon" name="telefon">
+                    <input type="submit" value="Indsend">
+                </form>
+            </section>
+            <section class="footer-section contact-info">
+                <h2>Kontakt</h2>
+                <ul class="kontakt1">
+                    <li>Kennedys</li>
+                    <li>Astervej 9</li>
+                    <li>8471 Sabro</li>
+                    <li>Danmark</li>
+                    <li>CVR-nummer: 28934874</li>
+                </ul>
+                <ul class="kontakt2">
+                    <li>Telefon nr:</li>
+                    <li>+4586495200</li>
+                    <li>E-mail: </li>
+                    <li>salonen@kennedys.dk</li>
+                </ul>
+            </section>
+            <section class="footer-section logo-section">
+                <img src="../imgs/logo.footer.webp" alt="Kennedys Logo" class="footer-logo">
+            </section>
+        </footer>
     </footer>
 </body>
 </html>
