--- a/html/prinsesse.html
+++ b/html/prinsesse.html
@@ -38,9 +38,13 @@
         <!-- Slut af navigations bar -->
 
         <!-- Start af big photo-->
-         <section class="cover-photo">
+         <section class="cover-photo-mobil">
         <img src="../imgs/prinsesse-kategori-billede.webp" alt="Kvinde der læner sig op af ræling med en tætsiddende brudekjole med blomster på">
         </section>
+        <section class="cover-photo-computer">
+            <img src="../imgs/big-photo-matrialer.webp" alt="Kvinde der læner sig op af ræling med en tætsiddende brudekjole med blomster på">
+        </section>
+
         <h1 class="prinsesse-titel">PRINSESSE</h1>
         <!-- Slut på big photo -->
     </header>
@@ -112,7 +116,7 @@
                     </div>
                 </div>
             </article>
-            
+
             <article class="button-holder2"> 
                 <a href="#slider-image5" class="dots"></a>
                 <a href="#slider-image8" class="dots"></a>
