materialer pc - done layout

--- a/html/materialer.html
+++ b/html/materialer.html
@@ -15,6 +15,10 @@
          <section class="cover">
             <img src="../imgs/matrialer-kategori-billede.webp" id="bigphoto" alt="Dette bliver indsat senere">
         </section>
+        <section >
+            <img class="cover-photo-computer" src="../imgs/big-photo-matrialer.webp" alt="Kvinde der læner sig op af ræling med en tætsiddende brudekjole med blomster på">
+            </section> 
+            <h1 class="matrialertitel">Materialer</h1>
         <!-- Slut på big photo -->
 
         <!-- Start af navigations bar -->
@@ -45,7 +49,6 @@
     </header>
 
     <main>
-        <h1 class="matrialertitel">Materialer</h1>
         <figure class="infographictext">
             <img class="infographic" src="../imgs/infographic-klar-til-site.webp" alt="Infographic, der illustrerer de forskellige materialer i en brudekjole, herunder satin, silke, blonde, tyl, organza og crepe.">
         </figure>
