Materialer - nyt billede og små ændringer

--- a/html/materialer.html
+++ b/html/materialer.html
@@ -16,7 +16,7 @@
             <img src="../imgs/matrialer-kategori-billede.webp" id="bigphoto" alt="Dette bliver indsat senere">
         </section>
         <section >
-            <img class="cover-photo-computer" src="../imgs/big-photo-matrialer.webp" alt="Kvinde der læner sig op af ræling med en tætsiddende brudekjole med blomster på">
+            <img class="cover-photo-computer" src="../imgs/materiale-cover.webp" alt="Kvinde der læner sig op af ræling med en tætsiddende brudekjole med blomster på">
             </section> 
             <h1 class="matrialertitel">Materialer</h1>
         <!-- Slut på big photo -->
@@ -29,7 +29,7 @@
             <ul>
                 <li><a href="services.html">Services</a></li>
                 <li><a href="booking.html">Booking</a></li>
-                <li><a href="kategorier.html">kategorier</a>
+                <li><a href="kategorier.html">Kategorier</a>
                     <!-- Fold ud menu når man hover over kategorier -->
                     <ul>
                         <li><a href="materialer.html">Materialer</a></li>
