--- a/html/prinsesse.html
+++ b/html/prinsesse.html
@@ -7,6 +7,9 @@
     <meta name="keywords" content="Brudekjole, Brudekjoler, Vintage brudekjoler, Køb af brudekjole, Køb af brudekjoler, Brudekjole trends, Brudekjole trends 2025, Brudekjoler med lange ærmer, Brudekjole med lange ærmer og blonder, Billige brudekjoler, Billig brudekjole">
     <link rel="icon" type="image/x-icon" href="../imgs/logo-endelig.webp" alt="Kennedys logo med firma navn og figur der ligner en kjole">
     <link rel="stylesheet" href="../css/prinsesse.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
     <title>Kennedys</title>
 </head>
 <body>
