ændring af alt tekst

--- a/html/prinsesse.html
+++ b/html/prinsesse.html
@@ -45,7 +45,7 @@
         <img src="../imgs/prinsesse-kategori-billede.webp" alt="Kvinde der læner sig op af ræling med en tætsiddende brudekjole med blomster på">
         </section>
         <section class="cover-photo-computer">
-            <img src="../imgs/big-photo-prinsesse.webp" alt="Kvinde der læner sig op af ræling med en tætsiddende brudekjole med blomster på">
+            <img src="../imgs/big-photo-prinsesse.webp" alt="Kvinde iført en lang brudekjole står i et afdæmpet rum med ryggen til">
         </section>
 
         <h1 class="prinsesse-titel">PRINSESSE</h1>
