--- a/html/materialer.html
+++ b/html/materialer.html
@@ -57,33 +57,33 @@
 
             <aside class="infohover" id="satin">
                 <input type="checkbox" id="satinbutton">
-                <label for="satinbutton"></label>
-                <img src="../imgs/" alt="en infopil"> <p>Satin er et glat og skinnende stof, der har en rig tekstur og en let glans. satinens alsidighed gør det ideelt til at opfylde forskellige ønsker og stilarter i brudekjole-designs.</p> </aside>
+                <label for="satinbutton"> <img src="../imgs/satin-circle.png"></label>
+                <p>Satin er et glat og skinnende stof, der har en rig tekstur og en let glans. satinens alsidighed gør det ideelt til at opfylde forskellige ønsker og stilarter i brudekjole-designs.</p> </aside>
 
             <aside class="infohover" id="silke">
                 <input type="checkbox" id="silkebutton">
-                <label for="silkebutton"></label>
-                <img src="../imgs/" alt="en infopil"> <p>Silke tilbyder et luksuriøst udseende og følelse med en glat tekstur og elegant drapering. Det er åndbart og behageligt, velegnet til forskellige klimaer.</p> </aside>
+                <label for="silkebutton"> <img src="../imgs/silk-circle.png"> </label>
+                <p>Silke tilbyder et luksuriøst udseende og følelse med en glat tekstur og elegant drapering. Det er åndbart og behageligt, velegnet til forskellige klimaer.</p> </aside>
 
             <aside class="infohover" id="blonde">
                 <input type="checkbox" id="blondebutton">
-                <label for="blondebutton"></label>
-                <img src="../imgs/" alt="en infopil"> <p>I dag er blonde stadig et af de mest eftertragtede materialer til brudekjoler, både fordi det er smukt og traditionelt, og fordi det kan tilpasses til mange forskellige personlige stilarter og udtryk.</p> </aside>
+                <label for="blondebutton"><img src="../imgs/blonde-circle.png"></label>
+                 <p>I dag er blonde stadig et af de mest eftertragtede materialer til brudekjoler, både fordi det er smukt og traditionelt, og fordi det kan tilpasses til mange forskellige personlige stilarter og udtryk.</p> </aside>
 
             <aside class="infohover" id="tyl">
                 <input type="checkbox" id="tylbutton">
-                <label for="tylbutton"></label>
-                <img src="../imgs/" alt="en infopil"> <p>Tyl er et let, gennemsigtigt stof, der er kendt for sin fine netstruktur og stive, men luftige karakter. Det giver mulighed for at skabe drømmende designs, der er lette og behagelige at bære.”</p> </aside>
+                <label for="tylbutton"><img src="../imgs/tyl-circle.png"> </label>
+                 <p>Tyl er et let, gennemsigtigt stof, der er kendt for sin fine netstruktur og stive, men luftige karakter. Det giver mulighed for at skabe drømmende designs, der er lette og behagelige at bære.”</p> </aside>
 
             <aside class="infohover" id="organza">
                 <input type="checkbox" id="organzabutton">
-                <label for="organzabutton"></label>
-                <img src="../imgs/" alt="en infopil"> <p>Organza udstråler både elegance, mens dets kombination af lethed og struktur gør det til et populært valg for brudekjoler, der skal have et luksuriøst og eventyrligt udtryk.</p> </aside>
+                <label for="organzabutton"><img src="../imgs/organza-circle.png"></label>
+                 <p>Organza udstråler både elegance, mens dets kombination af lethed og struktur gør det til et populært valg for brudekjoler, der skal have et luksuriøst og eventyrligt udtryk.</p> </aside>
 
             <aside class="infohover" id="crepe">
                 <input type="checkbox" id="crepebutton">
-                <label for="crepebutton"></label>
-                <img src="../imgs/" alt="en infopil"> <p>Crepe har en tekstur, der giver en unik følelse, som grundet sin tyngde, er særligt velegnet til havfru, og figursyede brudekjoler.</p> </aside> 
+                <label for="crepebutton"><img src="../imgs/crepe-circle.png"></label>
+                 <p>Crepe har en tekstur, der giver en unik følelse, som grundet sin tyngde, er særligt velegnet til havfru, og figursyede brudekjoler.</p> </aside> 
 
         </figure>
         <figure class="matriale-billeder"> 
