farve i navbar og semantiske tags

--- a/html/prinsesse.html
+++ b/html/prinsesse.html
@@ -55,33 +55,33 @@
     <main>
         <section class="container1">
             <article class="wrapper1">
-                <div class="slider-holder1">
-                    <div id="slider-image1">
+                <section class="slider-holder1">
+                    <figure id="slider-image1">
                         <figcaption class="overlay-text">
                             <h2> Janelle</h2>
                             <p> Tulle ball gown with off-shoulder neckline </p>
                         </figcaption>
-                    </div>
-                    <div id="slider-image2">
+                    </figure>
+                    <figure id="slider-image2">
                         <figcaption class="overlay-text">
                             <h2> Infinity</h2>
                             <p> Tulle ball gown with puff sleeves </p>
                         </figcaption>
-                    </div>
+                    </figure>
                     
-                    <div id="slider-image3">
+                    <figure id="slider-image3">
                         <figcaption class="overlay-text">
                             <h2> Gibson</h2>
                             <p> Soft wedding dress with V-neckline  </p>
                         </figcaption>
-                    </div>
-                    <div id="slider-image4">
+                    </figure>
+                    <figure id="slider-image4">
                         <figcaption class="overlay-text">
                             <h2> Hosanna</h2>
                             <p> Tulle ball gown with plunging v-neckline </p>
                         </figcaption>
-                    </div>
-                </div>
+                    </figure>
+                </section>
             </article>
             
             <article class="button-holder1"> 
@@ -92,32 +92,32 @@
 
         <section class="container2">
             <article class="wrapper2">
-                <div class="slider-holder2">
-                    <div id="slider-image5">
+                <section class="slider-holder2">
+                    <figure id="slider-image5">
                         <figcaption class="overlay-text">
                             <h2> Everette</h2>
                             <p> Clean ball gown with strapless notched neckline </p>
                         </figcaption>
-                    </div>
-                    <div id="slider-image6">
+                    </figure>
+                    <figure id="slider-image6">
                         <figcaption class="overlay-text">
                             <h2> Julia</h2>
                             <p> Strapless lace ball gown with cuff detail </p>
                         </figcaption>
-                    </div>
-                    <div id="slider-image7">
+                    </figure>
+                    <figure id="slider-image7">
                         <figcaption class="overlay-text">
                             <h2> Hayden</h2>
                             <p> Fit and flare wedding dress</p>
                         </figcaption>
-                    </div>
-                    <div id="slider-image8">
+                    </figure>
+                    <figure id="slider-image8">
                         <figcaption class="overlay-text">
                             <h2> Janessa</h2>
                             <p> Ruffle skirt with lace bodice ball gown</p>
                         </figcaption>
-                    </div>
-                </div>
+                    </figure>
+                </section>
             </article>
 
             <article class="button-holder2"> 
