--- a/index.html
+++ b/index.html
@@ -70,8 +70,7 @@
                 <article class="review-1">
                     <h2 class="review-titel">Skønneste team</h2>
                     <p class="review-tekst">Havde prøvet ikke mindre end 30 kjoler før jeg fandt jer. Tak for 
-                        jeres fantastiske profesionelle indsats og i gør alt for at det hele kan 
-                        lykkedes og man sammen kommer i mål så tak.</p>
+                        jeres fantastiske profesionelle indsats.</p>
                     <!-- stjerneikoner start -->
                     <section class="rating">
                         <img class="fas" src="imgs/star-icon-full.svg" alt="En udfyldt stjerne i en blød hvid"></img>
@@ -113,7 +112,8 @@
                 </article>
                 <article class="review-4">
                     <h2 class="review-titel">Søde medarbejdere</h2>
-                    <p class="review-tekst">Havde simpelthen den bedste oplevelse ved Kennedys, personalet var søde og imødekommende. De havde dog ikke lige så mange muligheder som jeg havde håbet på, men vil varmt anbefale dem.</p>
+                    <p class="review-tekst">Havde simpelthen den bedste oplevelse ved Kennedys, personalet var søde og 
+                        imødekommende.</p>
                     <!-- stjerneikoner start -->
                     <section class="rating">
                         <img class="fas" src="imgs/star-icon-full.svg" alt="En udfyldt stjerne i en blød hvid"></img>
