Line hover effekt

--- a/html/kategorier.html
+++ b/html/kategorier.html
@@ -43,13 +43,17 @@
         <section class="kategori-billeder" class="billede-link">
             <figure class="billede-box">
                 <img class="kategorier" src="../imgs/matrialer-kategori-billede.webp" alt="Brudekjole med sløjfe">
-                <figcaption class="overlay-text"><a href="materialer.html">MATRIALER</a></figcaption>
+                <figcaption class="overlay-text">
+                    <a href="materialer.html" class="link-text">MATRIALER </a>
+                </figcaption>
                 </figure>
 
             <figure class="billede-box">
                 <a href="prinsesse.html"></a>
                 <img class="kategorier" src="../imgs/prinsesse-kategori-billede.webp" alt="Prinsesse brudekjole">
-                <figcaption class="overlay-text"><a href="prinsesse.html">PRINSESSE</a></figcaption>
+                <figcaption class="overlay-text">
+                    <a href="prinsesse.html" class="link-text">PRINSESSE</a>
+                </figcaption>
             </figure>
             <figure class="billede-box">
                 <img class="kategorier" src="../imgs/a-facon-kategori-billede.webp" alt="A-facon brudekjole">
