validering af kategorisiden

--- a/html/prinsesse.html
+++ b/html/prinsesse.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Find din drømmebrudekjole hos os. Stort udvalg af elegante brudekjoler i alle stilarter og størrelser. Book prøvning og få ekspert rådgivning. Gratis fragt ved køb.">
     <meta name="keywords" content="Brudekjole, Brudekjoler, Vintage brudekjoler, Køb af brudekjole, Køb af brudekjoler, Brudekjole trends, Brudekjole trends 2025, Brudekjoler med lange ærmer, Brudekjole med lange ærmer og blonder, Billige brudekjoler, Billig brudekjole">
-    <link rel="icon" type="image/x-icon" href="../imgs/logo-endelig.webp" alt="Kennedys logo med firma navn og figur der ligner en kjole">
+    <link rel="icon" type="image/x-icon" href="../imgs/logo-endelig.webp">
     <link rel="stylesheet" href="../css/prinsesse.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
