--- a/index.html
+++ b/index.html
@@ -73,11 +73,11 @@
                         jeres fantastiske profesionelle indsats.</p>
                     <!-- stjerneikoner start -->
                     <section class="rating">
-                        <img class="fas" src="imgs/star-icon-full.svg" alt="En udfyldt stjerne i en blød hvid"></img>
-                        <img class="fas" src="imgs/star-icon-full.svg" alt="En udfyldt stjerne i en blød hvid"></img>
-                        <img class="fas" src="imgs/star-icon-full.svg" alt="En udfyldt stjerne i en blød hvid"></img>
-                        <img class="fas" src="imgs/star-icon-full.svg" alt="En udfyldt stjerne i en blød hvid"></img>
-                        <img class="fas" src="imgs/star-icon-full.svg" alt="En udfyldt stjerne i en blød hvid"></img>
+                        <img class="fas" src="imgs/star-icon-full.svg" alt="En udfyldt stjerne i en blød hvid">
+                        <img class="fas" src="imgs/star-icon-full.svg" alt="En udfyldt stjerne i en blød hvid">
+                        <img class="fas" src="imgs/star-icon-full.svg" alt="En udfyldt stjerne i en blød hvid">
+                        <img class="fas" src="imgs/star-icon-full.svg" alt="En udfyldt stjerne i en blød hvid">
+                        <img class="fas" src="imgs/star-icon-full.svg" alt="En udfyldt stjerne i en blød hvid">
                     </section>
                     <!-- stjerneikoner slut -->
                 </article>
@@ -86,11 +86,11 @@
                     <p class="review-tekst">Så flot og stilfuld butik. Jeg besøgte den flotte hjemmeside først og følte mig så inspireret og klar til at købe min kjole.</p>
                     <!-- stjerneikoner start -->
                     <section class="rating">
-                        <img class="fas" src="imgs/star-icon-full.svg" alt="En udfyldt stjerne i en blød hvid"></img>
-                        <img class="fas" src="imgs/star-icon-full.svg" alt="En udfyldt stjerne i en blød hvid"></img>
-                        <img class="fas" src="imgs/star-icon-full.svg" alt="En udfyldt stjerne i en blød hvid"></img>
-                        <img class="fas" src="imgs/star-icon-full.svg" alt="En udfyldt stjerne i en blød hvid"></img>
-                        <img class="fas" src="imgs/star-icon-full.svg" alt="En udfyldt stjerne i en blød hvid"></img>
+                        <img class="fas" src="imgs/star-icon-full.svg" alt="En udfyldt stjerne i en blød hvid">
+                        <img class="fas" src="imgs/star-icon-full.svg" alt="En udfyldt stjerne i en blød hvid">
+                        <img class="fas" src="imgs/star-icon-full.svg" alt="En udfyldt stjerne i en blød hvid">
+                        <img class="fas" src="imgs/star-icon-full.svg" alt="En udfyldt stjerne i en blød hvid">
+                        <img class="fas" src="imgs/star-icon-full.svg" alt="En udfyldt stjerne i en blød hvid">
                     </section>
                     <!-- stjerneikoner slut -->
                 </article>
@@ -102,11 +102,11 @@
                         til at hjælpe og rådgive mig.</p>
                     <!-- stjerneikoner start -->
                     <section class="rating">
-                        <img class="fas" src="imgs/star-icon-full.svg" alt="En udfyldt stjerne i en blød hvid"></img>
-                        <img class="fas" src="imgs/star-icon-full.svg" alt="En udfyldt stjerne i en blød hvid"></img>
-                        <img class="fas" src="imgs/star-icon-full.svg" alt="En udfyldt stjerne i en blød hvid"></img>
-                        <img class="fas" src="imgs/star-icon-full.svg" alt="En udfyldt stjerne i en blød hvid"></img>
-                        <img class="fas" src="imgs/star-icon-full.svg" alt="En udfyldt stjerne i en blød hvid"></img>
+                        <img class="fas" src="imgs/star-icon-full.svg" alt="En udfyldt stjerne i en blød hvid">
+                        <img class="fas" src="imgs/star-icon-full.svg" alt="En udfyldt stjerne i en blød hvid">
+                        <img class="fas" src="imgs/star-icon-full.svg" alt="En udfyldt stjerne i en blød hvid">
+                        <img class="fas" src="imgs/star-icon-full.svg" alt="En udfyldt stjerne i en blød hvid">
+                        <img class="fas" src="imgs/star-icon-full.svg" alt="En udfyldt stjerne i en blød hvid">
                     </section>
                     <!-- stjerneikoner slut -->
                 </article>
@@ -116,11 +116,11 @@
                         imødekommende.</p>
                     <!-- stjerneikoner start -->
                     <section class="rating">
-                        <img class="fas" src="imgs/star-icon-full.svg" alt="En udfyldt stjerne i en blød hvid"></img>
-                        <img class="fas" src="imgs/star-icon-full.svg" alt="En udfyldt stjerne i en blød hvid"></img>
-                        <img class="fas" src="imgs/star-icon-full.svg" alt="En udfyldt stjerne i en blød hvid"></img>
-                        <img class="fas" src="imgs/star-icon-full.svg" alt="En udfyldt stjerne i en blød hvid"></img>
-                        <img class="fas" src="imgs/star-icon-half.svg" alt="En halv udfyldt stjerne i en blød hvid"></img>
+                        <img class="fas" src="imgs/star-icon-full.svg" alt="En udfyldt stjerne i en blød hvid">
+                        <img class="fas" src="imgs/star-icon-full.svg" alt="En udfyldt stjerne i en blød hvid">
+                        <img class="fas" src="imgs/star-icon-full.svg" alt="En udfyldt stjerne i en blød hvid">
+                        <img class="fas" src="imgs/star-icon-full.svg" alt="En udfyldt stjerne i en blød hvid">
+                        <img class="fas" src="imgs/star-icon-half.svg" alt="En halv udfyldt stjerne i en blød hvid">
                     </section>
                     <!-- stjerneikoner slut -->
                 </article>
