--- a/html/materialer.html
+++ b/html/materialer.html
@@ -42,7 +42,7 @@
     <main>
         <figure class="infographictext">
             <img class="infographic" src="../imgs/infographic-klar-til-site.webp" alt="Infographic, der illustrerer de forskellige materialer i en brudekjole, herunder satin, silke, blonde, tyl, organza og crepe.">
-
+            <h2 class="overlay-text1">Klik på en cirkel og lær mere om materialerne</h2> 
             <aside class="infohover" id="satin">
                 <input type="checkbox" id="satinbutton">
                 <label for="satinbutton">
