--- a/html/materialer.html
+++ b/html/materialer.html
@@ -46,7 +46,7 @@
             <aside class="infohover" id="satin">
                 <input type="checkbox" id="satinbutton">
                 <label for="satinbutton">
-                    <img src="../imgs/infoknap.webp">
+                    <img src="../imgs/infoknap.webp" alt="usynlig knap">
                     <p>Satin er et glat og skinnende stof, der har en rig tekstur og en let glans. satinens alsidighed gør det ideelt til at opfylde forskellige ønsker og stilarter i brudekjole-designs.</p>
                 </label>
             </aside>
@@ -54,7 +54,7 @@
             <aside class="infohover" id="silke">
                 <input type="checkbox" id="silkebutton">
                 <label for="silkebutton">
-                    <img src="../imgs/infoknap.webp">
+                    <img src="../imgs/infoknap.webp" alt="usynlig knap">
                     <p>Silke tilbyder et luksuriøst udseende og følelse med en glat tekstur og elegant drapering. Det er åndbart og behageligt, velegnet til forskellige klimaer.</p>
                 </label>
                 </aside>
@@ -62,7 +62,7 @@
             <aside class="infohover" id="blonde">
                 <input type="checkbox" id="blondebutton">
                 <label for="blondebutton">
-                    <img src="../imgs/infoknap.webp">
+                    <img src="../imgs/infoknap.webp" alt="usynlig knap">
                     <p>I dag er blonde stadig et af de mest eftertragtede materialer til brudekjoler, både fordi det er smukt og traditionelt, og fordi det kan tilpasses til mange forskellige personlige stilarter og udtryk.</p>
                 </label>
                 </aside>
@@ -70,7 +70,7 @@
             <aside class="infohover" id="tyl">
                 <input type="checkbox" id="tylbutton">
                 <label for="tylbutton">
-                    <img src="../imgs/infoknap.webp">
+                    <img src="../imgs/infoknap.webp" alt="usynlig knap">
                     <p>Tyl er et let, gennemsigtigt stof, der er kendt for sin fine netstruktur og stive, men luftige karakter. Det giver mulighed for at skabe drømmende designs, der er lette og behagelige at bære.”</p>
                 </label>
                 </aside>
@@ -78,7 +78,7 @@
             <aside class="infohover" id="organza">
                 <input type="checkbox" id="organzabutton">
                 <label for="organzabutton">
-                    <img src="../imgs/infoknap.webp">
+                    <img src="../imgs/infoknap.webp" alt="usynlig knap">
                     <p>Organza udstråler både elegance, mens dets kombination af lethed og struktur gør det til et populært valg for brudekjoler, der skal have et luksuriøst og eventyrligt udtryk.</p>
                 </label>
                 </aside>
@@ -86,7 +86,7 @@
             <aside class="infohover" id="crepe">
                 <input type="checkbox" id="crepebutton">
                 <label for="crepebutton">
-                    <img src="../imgs/infoknap.webp">
+                    <img src="../imgs/infoknap.webp" alt="usynlig knap">
                     <p>Crepe har en tekstur, der giver en unik følelse, som grundet sin tyngde, er særligt velegnet til havfru, og figursyede brudekjoler.</p>
                 </label>
                  </aside> 
